--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,8 @@
     <%= render 'layouts/header' %>
     <%= yield %>
     <%= javascript_include_tag "application" %>
+    <div id="footer">
+        My Awesome Footer 2014
+    </div>
   </body>
 </html>
