Added some controls and visuals

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,8 +16,8 @@
         <td><%= task.name %></td>
         <td><%= task.description %></td>
         <td><%= task.planned_date %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
+        <td><%= link_to 'Show', task, :class => 'button round' %></td>
+        <td><%= link_to 'Edit', edit_task_path(task), :class => 'button round' %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
