--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <div class="row">
-    <div class="small-4 columns">
+    <div class="large-4 columns">
       <div class="field">
         <%= f.label :name %><br>
         <%= f.text_field :name %>
@@ -21,15 +21,15 @@
         <%= f.text_area :description %>
       </div>
     </div>
-    <div class="small-4 columns">
+    <div class="large-4 columns">
       <div class="field">
         <%= f.label :planned_date %><br>
         <%= f.date_select :planned_date %>
       </div>
       <div class="actions">
-        <%= f.submit %>
+        <%= f.submit :class => 'button round' %>
       </div>
     </div>
-    <div class="small-4 columns"></div>
+    <div class="large-4 columns"></div>
   </div>
 <% end %>
