--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= task.planned_date %></td>
         <td><%= link_to 'Show', task, :class => 'button round' %></td>
         <td><%= link_to 'Edit', edit_task_path(task), :class => 'button round' %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'button round' %></td>
       </tr>
     <% end %>
   </tbody>
