--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
 		<div class="top-bar-section">
 			<ul class="right">
 				<li><%= link_to "About",    '/static_pages/about' %></li>
-				<li><%= link_to "Contact Us",    '/static_pages/contact_us' %></li>
+				<li><%= link_to "Contact Us",    '/contacts' %></li>
 			</ul>
 		</div>
 	</nav>	
