--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,13 @@
 			<ul class="right">
 				<li><%= link_to "About",    '/static_pages/about' %></li>
 				<li><%= link_to "Contact Us",    '/contacts' %></li>
+				<% if current_user %>
+      		<li><%= link_to "Edit Profile", edit_user_path(current_user.id) %></li>
+      		<li><%= link_to "Logout", :logout, method: :post %></li>
+    <% else %>
+      		<li><%= link_to "Register", new_user_path %></li>
+      		<li><%= link_to "Login", :login %></li>
+    <% end %>
 			</ul>
 		</div>
 	</nav>	
