Added some design changes and fixed table display

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,8 @@
 td > a {
-	margin: 0 auto
+	margin-top: auto;
+    padding-top: auto;
+    margin-bottom: auto;
+    padding-bottom: auto;
 }
 
 .hidden { display: none; }
