--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -27,7 +27,7 @@
         <%= f.date_select :planned_date %>
       </div>
       <div class="actions">
-        <%= f.submit :class => 'button round' %>
+        <%= f.submit :class => 'button small round' %>
       </div>
     </div>
     <div class="large-4 columns"></div>
