--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @task, :class => 'button round' %>
-<%= link_to 'Back', tasks_path, :class => 'button round' %>
+<%= link_to 'Show', @task, :class => 'button small round' %>
+<%= link_to 'Back', tasks_path, :class => 'button small round' %>
