--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -17,9 +17,9 @@
         <td><%= task.description %></td>
         <td><%= task.planned_date %></td>
         <td><%= task.user_id %></td>
-        <td><%= link_to 'Show', task, :class => 'button round' %></td>
-        <td><%= link_to 'Edit', edit_task_path(task), :class => 'button round' %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'button round' %></td>
+        <td><%= link_to 'Show', task, :class => 'button small round' %></td>
+        <td><%= link_to 'Edit', edit_task_path(task), :class => 'button small round' %></td>
+        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'button small round' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path, :class => 'button round' %>
+<%= link_to 'New Task', new_task_path, :class => 'button small round' %>
