--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tasks_path, :class => 'button round' %>
+<%= link_to 'Back', tasks_path, :class => 'button small round' %>
