--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,5 +15,5 @@
   <%= @task.planned_date %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task), :class => 'button round' %>
-<%= link_to 'Back', tasks_path, :class => 'button round' %>
+<%= link_to 'Edit', edit_task_path(@task), :class => 'button tiny round' %>
+<%= link_to 'Back', tasks_path, :class => 'button tiny round' %>
