--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
         <%= f.password_field :password_confirmation %>
       </div>
       <div class="actions">
-        <%= f.submit :class => 'button round' %>
+        <%= f.submit :class => 'button small round' %>
       </div>
     </div>
   </div>  
