--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path, :class => 'button round' %>
+<%= link_to 'Back', users_path, :class => 'button tiny round' %>
+
+
