--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,5 @@
   <%= @user.salt %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user) , :class => 'button tiny round'%> |
+<%= link_to 'Back', users_path, :class => 'button tiny round' %>
