Added some minor features

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class = "row">
+	<div class="small-8 small-centered columns ">
+		<h2>Task list</h2>
+		<p>Task list is a simple task organization application. I am doing it to train my Ruby on Rails abilities and some gem usage. If you have some ideas - feel free to contact me through contact form. Thank you!</p>
+	</div>
+</div>
